:docs: updated. Assessment data fetch :hammer:
